added author section + css improvements

--- a/style.css
+++ b/style.css
@@ -1,14 +1,47 @@
 #post-container{
-  max-width: 800px;
+  max-width: 600px;
   margin: 20px auto;
   padding: 30px;
-  border: 1px solid grey;
-  border-radius: 15px;
+  border:1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+}
+
+#post-header{
+  margin-bottom: 20px;
+}
+
+#post-author-image{
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#post-author-image img{
+  border-radius: 100%;
+  width:48px;
+  height:48px;
+}
+
+#post-author-info{
+  margin-left: 10px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#post-author{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
+#post-date{
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  color: grey;
 }
 
 #post-image{
   width: 100%;
-  border-radius: 15px;
+  border-radius: 5px;
   margin-bottom: 20px;
 }
 
@@ -17,12 +50,6 @@
   font-size: 26px;
   font-weight: 700;
   margin-bottom: 5px
-}
-
-#post-date{
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  color: grey;
 }
 
 #post-content{
