--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
   border:1px solid rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+  line-height: 1.2;
 }
 
 #post-header{
